remove virtual thread